--- a/portfolio.html
+++ b/portfolio.html
@@ -42,41 +42,44 @@
     <section class="form-row w-30 p-3">
       <section class="col-sm-12 col-md-12 col-lg-12 mb-3">
         <section class="row row-cols-1 row-cols-md-2">
-          <section class="col mb-4">
+          <section class="col mb-2">
+            <section class="card h-100 justify-content-center">
+              <a href=https://github.com/KristyKeller/Stream-Saver target="_blank">
+              <img src="./assets/Images/screencapture-stream-saver-herokuapp-watchlist-2020-10-18-23_44_00.png" class="card-img-top" alt="Project Six"></a>
+            </section>
+          </section>
+          <section class="col mb-2">
+            <section class="card h-100 justify-content-center">
+              <a href="https://github.com/KristyKeller/DayPlanner" target="_blank">
+                <img src="./assets/Images/day-planner.png" class="card-img-top" alt="Project Five"> </a>
+            </section>
+          </section>
+          <section class="col mb-2">
+            <section class="card h-100 justify-content-center">
+              <a href="https://github.com/KristyKeller/IceCreamTruck" target="_blank">
+              <img src="./assets/Images/Screenshot-2.png" class="card-img-top" alt="Project One"> </a>
+            </section>
+          </section>
+          <section class="col mb-2">
+            <section class="card h-100">
+              <a href=https://github.com/KristyKeller/NoteTaker target="_blank">
+              <img src="./assets/Images/note-taker.png" class="card-img-top" alt="Project Three"> </a>
+            </section>
+          </section>
+          <section class="col mb-2">
             <section class="card h-100 justify-content-center">
               <a href="https://github.com/KristyKeller/TeamProfileGenerator" target="_blank">
-                <img src="./assets/Images/team-gen-screenshot.png" class="card-img-top" alt="Project One">
-            </section>
-            </a>
-          </section>
-          <section class="col mb-4">
-            <section class="card h-100">
-              <a href="https://github.com/KristyKeller/DayPlanner" target="_blank">
-                <img src="./assets/Images/day-planner.png" class="card-img-top" alt="Project Two"> </a>
+                <img src="./assets/Images/team-gen-screenshot.png" class="card-img-top" alt="Project Two"> </a>
             </section>
           </section>
-          <section class="col mb-4">
+          <section class="col mb-2">
             <section class="card h-100">
               <a href="https://github.com/KristyKeller/BetterMe" target="_blank">
-                <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project Three"> </a>
-            </section>
-          </section>
-          <section class="col mb-4">
-            <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
-            </section>
-          </section>
-          <section class="col mb-4">
-            <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Four">
-            </section>
-          </section>
-          <section class="col mb-4">
-            <section class="card h-100">
-              <img src="./assets/Images/placeholder.jpg" class="card-img-top" alt="Project Five">
+                <img src="./assets/Images/home-page.png" class="card-img-top" alt="Project Four"> </a>
             </section>
           </section>
         </section>
+      </section>
       </section>
   </main>
   </br>
